[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repomapper"
version = "0.1.1"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.0",
    "fastmcp>=2.11.3",
    "grep-ast>=0.3.0",
    "networkx>=3.0",
    "pygments>=2.14.0",
    "tiktoken>=0.5.0",
    "tree-sitter>=0.20.0",
]

[project.scripts]
repomapper = "repomap:main"
repomap-mcp = "repomap_server:main"

[tool.setuptools]
py-modules = ["repomap_server", "repomap", "repomap_class", "utils", "importance", "scm"]
